# sidetrack

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: how-it-works.html
scripts/: generate_project_image.py
src/sidetrack/: __init__.py  cli.py  gitops.py
tests/: test_gitops.py
