[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "sidetrack"
version = "0.1.0"
description = "Sensible git worktree manager for everyday multi-branch workflows"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "gowtham980" }
]
keywords = ["git", "worktree", "cli", "developer-tools", "productivity"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
sidetrack = "sidetrack.cli:app"
st = "sidetrack.cli:app"

[project.urls]
Homepage = "https://github.com/gowtham980/sidetrack"
Repository = "https://github.com/gowtham980/sidetrack"
Issues = "https://github.com/gowtham980/sidetrack/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sidetrack"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
